--- a/sdk-alert/src/main/res/values/strings.xml
+++ b/sdk-alert/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">EasyAlert</string>
+    <string name="app_name">AndroQuake</string>
+
+    <string name="default_title">Her Bağışla Fark Yarat</string>
+    <string name="default_description">Uygulamamız, 6 Şubat 2023 tarihinde yaşanan ve 11 ilde etkisini hissettiren depremden  etkilenenlerin hayatlarında bir fark yaratmanızı diliyor.
+Sadece birkaç dokunuşla afet yardımı çabalarına bağışta bulunabilir ve ihtiyacı olanlara
+ yardım sağlayabilirsiniz.</string>
+
+    <string name="content_description_logo">donate logo</string>
 </resources>
