--- a/donation/src/main/res/values/strings.xml
+++ b/donation/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="default_title">Her Bağışla Fark Yaratın</string>
-    <string name="default_description">Uygulamamız, 6 Şubat 2023 tarihinde yaşanan ve 11 ilde etkisini hissettiren depremden etkilenenlerin hayatlarında bir fark yaratmanızı diliyor.
-Sadece birkaç dokunuşla afet yardımı çabalarına bağışta bulunabilir ve ihtiyacı olanlara
- yardım sağlayabilirsiniz.</string>
+    <string name="make_a_difference">Fark Yaratın</string>
+    <string name="default_date">6 Şubat 2023</string>
+    <string name="default_description">Uygulamamız, 6 Şubat 2023 tarihinde yaşanan depremden etkilenenlerin hayatlarında bir fark yaratmanızı diliyor. Sadece birkaç dokunuşla afet yardımı çabalarına bağışta bulunabilir ve ihtiyacı olanlara yardım sağlayabilirsiniz.</string>
     <string name="content_description_logo">donate logo</string>
 </resources>
